--- a/index.html
+++ b/index.html
@@ -85,12 +85,9 @@
     <div class="container">
         <h1>We're Coming Soon!</h1>
         <p>Our website is under construction. Stay tuned for something amazing. Be the first to know by subscribing below!</p>
-        <form action="#">
-            <input type="email" placeholder="Enter your email address" required>
-            <button type="submit">Notify Me</button>
-        </form>
+        
         <footer>
-            &copy; 2024 Your Company. All rights reserved.
+            &copy; 2024 Priyanshu Kumar. All rights reserved.
         </footer>
     </div>
 </body>
